<?xml version="1.0" encoding="utf-8"?>

<!-- NestedScrollView 已經取代了ScrollView -->
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <!--
         step_summary: 縮合時 想顯示什麼訊息
         step_state: 目前是否被選中 展開中
         step_index: 意義不明
         step_title: 標題名稱
        -->
        <moe.feng.common.stepperview.VerticalStepperItemView
            android:id="@+id/stepper_0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:step_activated_color="#80ADD7"
            app:step_index="1"
            app:step_line_color="#0ABDA0"
            app:step_normal_color="#BF9D7A"
            app:step_state="selected"
            app:step_summary="比爾博好友甘道夫經過探查後發現那就是失落的至尊魔戒..."
            app:step_title="魔戒首部曲：魔戒現身">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/content_step_0"
                    android:textColor="#80ADD7"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_next_0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#80ADD7"
                        android:text="@string/next"
                        android:textColor="#EBF2EA"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:backgroundTint="#BF9D7A"
                        android:text="@string/prev_home"/>
                </LinearLayout>
            </LinearLayout>
        </moe.feng.common.stepperview.VerticalStepperItemView>

        <moe.feng.common.stepperview.VerticalStepperItemView
            android:id="@+id/stepper_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:step_activated_color="#80ADD7"
            app:step_index="2"
            app:step_line_color="#0ABDA0"
            app:step_normal_color="#BF9D7A"
            app:step_summary="甘道夫在摩瑞亞的橋上與炎魔對峙..."
            app:step_title="魔戒二部曲：雙城奇謀">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/content_step_1"
                    android:textColor="#80ADD7"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_next_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#80ADD7"
                        android:text="@string/next"
                        android:textColor="#EBF2EA"/>

                    <Button
                        android:id="@+id/button_prev_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:backgroundTint="#BF9D7A"
                        android:text="@string/prev"/>
                </LinearLayout>
            </LinearLayout>
        </moe.feng.common.stepperview.VerticalStepperItemView>

        <moe.feng.common.stepperview.VerticalStepperItemView
            android:id="@+id/stepper_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:step_activated_color="#80ADD7"
            app:step_index="3"
            app:step_is_last="true"
            app:step_line_color="#0ABDA0"
            app:step_normal_color="#BF9D7A"
            app:step_summary="史麥戈殺死德戈並奪取魔戒..."
            app:step_title="魔戒三部曲：王者再臨">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/content_step_2"
                    android:textColor="#80ADD7"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_next_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#80ADD7"
                        android:text="@string/prev_home"
                        android:textColor="#EBF2EA"/>

                    <Button
                        android:id="@+id/button_prev_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:backgroundTint="#BF9D7A"
                        android:text="@string/prev"/>
                </LinearLayout>
            </LinearLayout>
        </moe.feng.common.stepperview.VerticalStepperItemView>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>